--- a/src/main/resources/templates/relatorio/relatorio.html
+++ b/src/main/resources/templates/relatorio/relatorio.html
@@ -19,6 +19,8 @@
             <div class="panel-body">
                 <div class="alinhar-botoes">
                     <a class="bi bi-calendar-date btn btn-outline-dark btn-menu" th:href="@{/relatorio/mensal}"> Faturamento Mensal</a>
+                    <a class="bi bi-x-diamond-fill btn btn-outline-dark btn-menu"> Faturamento Em PIX</a>
+                    <a class="bi bi-currency-exchange btn btn-outline-dark btn-menu"> Faturamento em Dinheiro</a>
                 </div>
             </div>
         </div>
