--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -38,7 +38,7 @@
 	height: 25px;
 	font-size:medium;
 }
-.alert{
+margin-left{
 	margin-top:10px;
 	margin-bottom: 5px;
 }
@@ -128,6 +128,7 @@
       align-items: center;
       gap: 10px;
       color: white;
+      margin-right:50px;
 }
 
 .user-info p {
