--- a/src/main/resources/templates/tabelaTeste.html
+++ b/src/main/resources/templates/tabelaTeste.html
@@ -6,42 +6,85 @@
 	<body>
 		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 	</body>
-	
  	<div class="text-center">
-	 		<div class="container">
-		       <th:block th:fragment="tabelaFragment">
-			  <table>
-			    <thead>
-			      <tr>
-			        <th>#</th>
-			        <th>Descrição</th>
-			        <th>Quantidade</th>
-			        <th>Preço</th>
-			        <th>Subtotal</th>
-			      </tr>
-			    </thead>
-			    <tbody>
-			      <tr th:each="item, iterStat : ${orcamento.items}">
-			        <td th:text="${iterStat.count}"></td>
-			        <td>
-			          <input type="text" class="form-control descricao" th:field="*{itens[__${iterStat.index}__].descricao}" />
-			        </td>
-			        <td>
-			          <input type="number" class="form-control quantidade" th:field="*{itens[__${iterStat.index}__].quantidade}" />
-			        </td>
-			        <td>
-			          <input type="number" class="form-control preco" th:field="*{itens[__${iterStat.index}__].preco}" step="0.01" />
-			        </td>
-			        <td>
-			          <span class="subtotal" th:text="${item.quantidade * item.preco} ?: '0.00'">0.00</span>
-			        </td>
-			      </tr>
-			    </tbody>
-			  </table>
-			</th:block>
+ 		<div class="container">
+	        <table id="tabelaItens">
+				  <thead>
+				    <tr>
+				      <th>Produto</th>
+				      <th>Descricao</th>
+				      <th>Quantidade</th>
+				      <th>Preço Unitário</th>
+				      <th>Total</th>
+				    </tr>
+				  </thead>
+				  <tbody>
+				    <tr>
+				      <td>1</td>
+				      <td><input type="text" class="form-control descricao" ></td>
+				      <td><input type="number" class="form-control quantidade"  value=""></td>
+				      <td><input type="number" class="form-control preco"  value="" step="0.01"></td>
+				      <td><span class="subtotal"> 00.00</span></td>
+				    </tr>
+				    <tr>
+				      <td>2</td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
+				      <td><span class="subtotal"> 00.00</span></td>
+				    </tr> 
+				    <tr>
+				      <td>3</td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
+				      <td><span class="subtotal"> 00.00</span></td>
+				    </tr>
+				     <tr>
+				      <td>4</td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
+				      <td><span class="subtotal"> 00.00</span></td>
+				    </tr>
+				     <tr>
+				      <td>5</td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
+				      <td><span class="subtotal"> 00.00</span></td>
+				    </tr>
+				     <tr>
+				      <td>6</td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
+				      <td><span class="subtotal"> 00.00</span></td>
+				    </tr> 
+				    <tr>
+				      <td>7</td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
+				      <td><span class="subtotal"> 00.00</span></td>
+				    </tr>
+				     <tr>
+				      <td>8</td>
+				      <td><input type="text" class="form-control descricao"></td>
+				      <td><input type="number" class="form-control quantidade" value=""></td>
+				      <td><input type="number" class="form-control preco" value="" step="0.01"></td>
+				      <td><span class="subtotal"> 00.00</span></td>
+				    </tr>
+				  </tbody>
+			</table>
+			
 		</div>	
-		
-   </div>
+		<div class="container">
+			<div class="alinhar-a-direita">
+			  <div><b>Total Geral: </b><span id="totalGeral"> 00.00</span></div>
+			</div>
+		</div>
+   </div> 
 <script>
 		function atualizarTotais() {
 		  // Pegar todas as linhas da tabela
