--- a/src/main/resources/templates/tabelaOrcamento.html
+++ b/src/main/resources/templates/tabelaOrcamento.html
@@ -42,7 +42,7 @@
 		</div>	
 		<div class="container">
 			<div class="alinhar-a-direita">
-			  <div><b>Total Geral: </b><span id="totalGeral"> 00.00</span></div>
+			  <div><b>Total Geral: </b><span id="totalGeral" th:field="*{totalGeral}"> 00.00</span></div>
 			</div>
 		</div>
    </div> 
