--- a/src/main/resources/templates/pesquisarQrCode.html
+++ b/src/main/resources/templates/pesquisarQrCode.html
@@ -22,7 +22,7 @@
 			</div>
 		</div>
 		<div>
-			<a class="bi bi-qr-code-scan  btn btn-outline-dark btn-menu alinhar-a-direita" th:href="@{/pagamento/novo}"> Gerar novo QR Code</a>
+			<a class="bi bi-qr-code-scan  btn btn-outline-dark btn-menu alinhar-a-direita" th:href="@{/qrcode/novo}"> Gerar novo QR Code</a>
 		</div>
 		<div class="panel-body">
 			<table class="table table-bordered table-striped">
