--- a/src/main/resources/templates/site/index.html
+++ b/src/main/resources/templates/site/index.html
@@ -19,9 +19,9 @@
             
             <a class="bi bi-flag-fill btn btn btn-outline-dark btn-menu" th:href="@{/servicoRapido/novo}"> Lançar Serviço Rápido</a>
             
-            <a class="bi bi-clipboard-minus btn btn-outline-dark btn-menu" th:href="@{/documentos}"> Documentos</a>
+            <a class="bi bi-clipboard-minus btn btn-outline-dark btn-menu" th:href="@{/documento}"> Documentos</a>
             
-            <a class="bi bi-wallet2 btn btn-outline-dark btn-menu" th:href="@{/pagamento}"> Pagamentos</a>
+            <a class="bi bi-wallet2 btn btn-outline-dark btn-menu" th:href="@{/qrcode}"> Pagamentos</a>
 
             <a class="bi bi-reception-4 btn btn-outline-dark btn-menu" th:href="@{/relatorio/novo}"> Relatórios</a>
 
