--- a/src/main/resources/templates/pesquisarDocumentos.html
+++ b/src/main/resources/templates/pesquisarDocumentos.html
@@ -20,10 +20,28 @@
     		</div>
     	</div>
     	<div>
-			<a class="bi bi-journal-plus btn btn-outline-dark btn-menu alinhar-a-direita" th:href="@{/documentos/novo}"> Novo</a>
+			<a class="bi bi-journal-plus btn btn-outline-dark btn-menu alinhar-a-direita" th:href="@{/documento/novo}"> Novo</a>
 		</div>
 	
 		<div class="panel-body">
+			<form method="GET" class="form-horizontal" action="/documento/pesquisarDocumento" th:object="${filtro}">
+					<div class="form-group">
+						<div class="col-sm-4">
+								
+							  <div class="input-group mb-3">
+									<input type="text" class="form-control" placeholder="Qual documento você está procurando?"
+												autofocus="autofocus" th:field="*{nome}"></input>
+									  <span class="input-group-text">
+										 <button type="submit" class="btn btn-default">
+											<i class="bi bi-search"></i>
+										 </button>
+									  </span>
+							  </div>
+						 </div>
+					</div>
+			</form>
+						
+			
 			<table class="table table-bordered table-striped">
 				
 				<thead>
@@ -41,7 +59,7 @@
 						</tr>
 						<tr th:each="documento: ${listaDocumentos}">
 							<td class="text-center"/>
-							<td class="text-center" th:text="${documento.tipoDocumento}"/>
+							<td class="text-center" th:text="${documento.tipo}"/>
 							<td class="text-center" th:text="${documento.nome}"/>
 							
 							<td class="text-center">
